--- a/employee.html
+++ b/employee.html
@@ -13,23 +13,25 @@
 
 </head>
 
-<body>
+<body onload="showData()">
     <div class="container">
-        <div class="jumbotron ">
-            <p id="id"></p>
-            <h1 id="name"></h1>
-            <p id="role"></p>
+        <div class="jumbotron " id="card">
         </div>
-        <button onclick="showData()">click me</button>
     </div>
     <script src="employee.js"></script>
     <script>
         function showData() {
             var i;
             for (i in emp) {
-                document.getElementById("id").innerHTML = emp[i].id;
-                document.getElementById("name").innerHTML = emp[i].name;
-                document.getElementById("role").innerHTML = emp[i].role;
+                var div = document.createElement("div");
+                div.appendChild(document.createTextNode(emp[i].name));
+                // div.appendChild(document.getElementById("id").innerHTML = emp[i].id);
+                // div.appendChild(document.getElementById("name").innerHTML = emp[i].name);
+                // div.appendChild(document.getElementById("role").innerHTML = emp[i].role);
+                document.getElementById("card").append(div);
+                // document.getElementById("id").innerHTML = emp[i].id;
+                // document.getElementById("name").innerHTML = emp[i].name;
+                // document.getElementById("role").innerHTML = emp[i].role;
                 console.log(emp[i].name);
             }
         }
